--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ composeBom = "2025.06.01"
 roomRuntime = "2.7.2"
 runtimeLivedata = "1.8.3"
 ksp = "2.1.0-1.0.29"
-material3 = "1.4.0-alpha16"
+material3 = "1.3.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
