--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".ScheduleApplication"
@@ -18,9 +19,8 @@
         tools:targetApi="36">
         <activity
             android:name=".MainActivity"
-            android:configChanges="uiMode"
             android:exported="true"
-            android:screenOrientation="portrait"
+            android:configChanges="uiMode|orientation|screenSize"
             android:theme="@style/Theme.ScheduleRutMiit">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
