--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ gsonVersion = "2.13.2"
 hiltAndroid = "2.57.2"
 hiltLifecycleViewmodel = "1.3.0"
 jsoup = "1.21.2"
-kotlin = "2.2.20"
+kotlin = "2.2.21"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -16,6 +16,8 @@ espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
 composeBom = "2025.10.01"
+pagingCompose = "3.4.0-alpha04"
+pagingRuntime = "3.3.6"
 roomRuntime = "2.8.3"
 runtimeLivedata = "1.9.4"
 ksp = "2.2.20-2.0.3"
@@ -31,6 +33,8 @@ androidx-glance-material3 = { module = "androidx.glance:glance-material3", versi
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltLifecycleViewmodel" }
 androidx-hilt-lifecycle-viewmodel = { module = "androidx.hilt:hilt-lifecycle-viewmodel", version.ref = "hiltLifecycleViewmodel" }
 androidx-hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "hiltLifecycleViewmodel" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
+androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingRuntime" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
