--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 agp = "8.13.0"
 coilCompose = "2.7.0"
 converterGson = "3.0.0"
-coreSplashscreen = "1.0.1"
+coreSplashscreen = "1.2.0"
 datastorePreferences = "1.1.7"
 glanceMaterial3 = "1.1.1"
 gsonVersion = "2.13.2"
@@ -16,14 +16,14 @@ junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
-composeBom = "2025.10.01"
+composeBom = "2025.11.00"
 pagingCompose = "3.4.0-alpha04"
 pagingRuntime = "3.3.6"
 roomRuntime = "2.8.3"
 runtimeLivedata = "1.9.4"
 ksp = "2.2.20-2.0.3"
 material3 = "1.4.0"
-navigation3 = "1.0.0-beta01"
+navigation3 = "1.0.0-rc01"
 workRuntimeKtx = "2.11.0"
 
 [libraries]
