--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ agp = "8.13.1"
 coilCompose = "2.7.0"
 converterGson = "3.0.0"
 coreSplashscreen = "1.2.0"
-datastorePreferences = "1.1.7"
-firebaseBom = "34.5.0"
+datastorePreferences = "1.2.0"
+firebaseBom = "34.6.0"
 glanceMaterial3 = "1.1.1"
 gsonVersion = "2.13.2"
 hiltAndroid = "2.57.2"
@@ -15,16 +15,16 @@ coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
-lifecycleRuntimeKtx = "2.9.4"
-activityCompose = "1.11.0"
-composeBom = "2025.11.00"
+lifecycleRuntimeKtx = "2.10.0"
+activityCompose = "1.12.0"
+composeBom = "2025.11.01"
 pagingCompose = "3.4.0-alpha04"
 pagingRuntime = "3.3.6"
-roomRuntime = "2.8.3"
-runtimeLivedata = "1.9.4"
+roomRuntime = "2.8.4"
+runtimeLivedata = "1.9.5"
 ksp = "2.2.20-2.0.3"
 material3 = "1.4.0"
-navigation3 = "1.0.0-rc01"
+navigation3 = "1.0.0"
 workRuntimeKtx = "2.11.0"
 
 [libraries]
