--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:launchMode="singleTask"
             android:configChanges="uiMode|orientation|screenSize"
             android:theme="@style/Theme.App.Starting">
             <intent-filter>
@@ -63,5 +64,12 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/events_widget_info" />
         </receiver>
+
+        <meta-data
+            android:name="firebase_analytics_collection_deactivated"
+            android:value="${firebaseAnalyticsDeactivated}" />
+        <meta-data
+            android:name="firebase_crashlytics_collection_enabled"
+            android:value="${crashlyticsCollectionEnabled}" />
     </application>
 </manifest>
