--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,32 @@
 [versions]
-agp = "8.13.1"
+agp = "8.13.2"
 coilCompose = "2.7.0"
 converterGson = "3.0.0"
 coreSplashscreen = "1.2.0"
 datastorePreferences = "1.2.0"
-firebaseBom = "34.6.0"
+firebaseBom = "34.7.0"
 glanceMaterial3 = "1.1.1"
 gsonVersion = "2.13.2"
 hiltAndroid = "2.57.2"
 hiltLifecycleViewmodel = "1.3.0"
 jsoup = "1.21.2"
-kotlin = "2.2.21"
+kotlin = "2.3.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
-activityCompose = "1.12.0"
-composeBom = "2025.11.01"
-pagingCompose = "3.4.0-alpha04"
+activityCompose = "1.12.2"
+composeBom = "2025.12.01"
+pagingCompose = "3.4.0-beta01"
 pagingRuntime = "3.3.6"
 roomRuntime = "2.8.4"
-runtimeLivedata = "1.9.5"
-ksp = "2.2.20-2.0.3"
+runtimeLivedata = "1.10.0"
+ksp = "2.3.1"
 material3 = "1.4.0"
 navigation3 = "1.0.0"
 workRuntimeKtx = "2.11.0"
+ui = "1.10.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -68,6 +69,7 @@ androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedat
 androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "navigation3" }
 androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "navigation3" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converterGson" }
+androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
