--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,12 +4,12 @@ coilCompose = "2.7.0"
 converterGson = "3.0.0"
 coreSplashscreen = "1.2.0"
 datastorePreferences = "1.2.0"
-firebaseBom = "34.7.0"
+firebaseBom = "34.8.0"
 glanceMaterial3 = "1.1.1"
 gsonVersion = "2.13.2"
 hiltAndroid = "2.57.2"
 hiltLifecycleViewmodel = "1.3.0"
-jsoup = "1.21.2"
+jsoup = "1.22.1"
 kotlin = "2.3.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
@@ -17,16 +17,16 @@ junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
 activityCompose = "1.12.2"
-composeBom = "2025.12.01"
-pagingCompose = "3.4.0-beta01"
+composeBom = "2026.01.00"
+pagingCompose = "3.4.0-rc01"
 pagingRuntime = "3.3.6"
 roomRuntime = "2.8.4"
-runtimeLivedata = "1.10.0"
+runtimeLivedata = "1.10.1"
 ksp = "2.3.1"
 material3 = "1.4.0"
 navigation3 = "1.0.0"
 workRuntimeKtx = "2.11.0"
-ui = "1.10.0"
+ui = "1.10.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
