--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,17 +16,17 @@ junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
-activityCompose = "1.12.2"
-composeBom = "2026.01.00"
-pagingCompose = "3.4.0-rc01"
-pagingRuntime = "3.3.6"
+activityCompose = "1.12.3"
+composeBom = "2026.01.01"
+pagingCompose = "3.4.0"
+pagingRuntime = "3.4.0"
 roomRuntime = "2.8.4"
-runtimeLivedata = "1.10.1"
+runtimeLivedata = "1.10.2"
 ksp = "2.3.1"
 material3 = "1.4.0"
 navigation3 = "1.0.0"
-workRuntimeKtx = "2.11.0"
-ui = "1.10.1"
+workRuntimeKtx = "2.11.1"
+ui = "1.10.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +36,7 @@ androidx-glance-appwidget = { module = "androidx.glance:glance-appwidget", versi
 androidx-glance-material3 = { module = "androidx.glance:glance-material3", version.ref = "glanceMaterial3" }
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltLifecycleViewmodel" }
 androidx-hilt-lifecycle-viewmodel = { module = "androidx.hilt:hilt-lifecycle-viewmodel", version.ref = "hiltLifecycleViewmodel" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltLifecycleViewmodel" }
 androidx-hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "hiltLifecycleViewmodel" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
 androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingRuntime" }
